kubernetes/environments/oci/patches/elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: mankahi
spec:
  template:
    spec:
      containers:
        - name: elasticsearch
