kubernetes/environments/oci/patches/delete-ingress-controller.yaml
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: mankahi
---
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: mankahi
